--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "public": true,
   "builds": [
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "api/upbit.js", "use": "@vercel/node" }
+    { "src": "server.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/upbit", "dest": "/api/upbit.js" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/public/$1" }
-  ]
+  ],
+  "outputDirectory": "public"
 }
