--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "server.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
-  ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/api/upbit", "dest": "/api/upbit.js" },
+    { "src": "/", "dest": "/public/index.html" },
     { "src": "/(.*)", "dest": "/public/$1" }
-  ],
-  "outputDirectory": "public"
+  ]
 }
