--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "routes": [
-    { "src": "/api/upbit", "dest": "/api/upbit.js" },
-    { "src": "/api/bithumb", "dest": "/api/bithumb.js" },
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/public/$1" }
-  ]
+  "version": 2
 }
