--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "version": 2
+  "version": 2,
+  "functions": { "api/**.js": { "runtime": "nodejs18.x" } },
+  "routes": [
+    { "src": "/api/upbit", "dest": "/api/upbit.js" },
+    { "src": "/api/bithumb", "dest": "/api/bithumb.js" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
 }
