--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": ".*", "dest": "/index.html" }
+    { "src": "/api/upbit", "dest": "/api/upbit.js" },
+    { "src": "/api/bithumb", "dest": "/api/bithumb.js" },
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
