--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,6 @@
   "routes": [
     { "src": "/api/upbit", "dest": "/api/upbit.js" },
     { "src": "/api/bithumb", "dest": "/api/bithumb.js" },
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
