--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/(.*\\.css)", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
